# agrox

./: README.md  db-dump-example.js  package-lock.json  package.json  reset-database.js  seed-database.js  seed-sample-data.js  tileprocess.js  tileprocess.sh
backend/agrox-api/: .prettierrc  app.yaml  package.json  tsconfig.json
backend/agrox-api/images/: image_uri_formation.md
backend/agrox-api/prisma/: schema.prisma
backend/agrox-api/src/: app.controller.ts  app.module.ts  main.ts  types.ts  untyped-module-declarations.d.ts
backend/agrox-api/src/dev-scripts/python-area/: 1-prescription.py  2-quotation.py  3-prescription-parser.py  prescription_template.xlsx  pyproject.toml
backend/cloud-functions/diagnosis-parser/: index.js  package-lock.json  package.json
backend/cloud-functions/field-map-parser/: index.js  package-lock.json  package.json
backend/cloud-functions/register-farm/: index.js  package.json
backend/database/diagram/: agrox_scheme.dbm
frontend/: App.tsx  agroexplore-key-3.keystore  agrox-key-3.jks  agrox-key-3.jks-info.md  app.json  google-services-prod.json  google-services.json  package-lock.json  package.json  tsconfig.json
frontend/components/: app-root.tsx  drawer-constants.ts  drawer-content.tsx  main.tsx  navigation-types.ts  sign-in.tsx  welcome.tsx
frontend/components/00-common/: accordion-table.tsx  accordion.tsx  back-header.tsx  card-button.tsx  card-title.tsx  checkbox.tsx  closable-header.tsx  (+15 more)
frontend/models/: index.ts
frontend/redux-things/: index.ts  root-structure.ts  store.ts  utils.ts
frontend/src/: assets.ts
(+221 files in other folders)
